its a little bit nicer

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -4,11 +4,20 @@
     <link rel="stylesheet" href="./styles.css">
 
     <title>Cheat-Sheet</title>
+    <style>
+        body
+        {
+            background: linear-gradient(to bottom, deepskyblue, mediumseagreen, lightseagreen);
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </html>
 <body>
-<div class="rainbow-border"></div>
-
-    <h1>Cheat-Sheet Overview</h1>
+    <div class="blink-text">Cheat-Sheet Overview</div>
 
     <hr>
     <button onclick="window.location.href = 'cheatsheetgeneral.html'">General</button>
