--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -1,27 +1,27 @@
-<!DOCTYPE>
-<html lang = en>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
-
     <title>Cheat-Sheet</title>
-    <style>
-        body
-        {
-            background: linear-gradient(to bottom, deepskyblue, mediumseagreen, lightseagreen);
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
-</html>
+    <link rel="stylesheet" href="./styles.css">
+</head>
 <body>
-    <div class="blink-text">Cheat-Sheet Overview</div>
-
-    <hr>
-    <button onclick="window.location.href = 'cheatsheetgeneral.html'">General</button>
-    <button onclick="window.location.href = 'cheatsheetforcss.html' ">CSS</button>
-    <button onclick="window.location.href = 'cheatsheetforhtml.html'">HTML</button>
-    <button onclick="window.location.href = 'cheatsheetbasics.html'">Basics</button>
+<header class="menu">
+    <div>
+        <h1>Cheat Sheet</h1>
+        <nav>
+            <ul>
+                <li><button onclick="window.location.href = 'cheatsheetgeneral.html'">General</button></li>
+                <li><button onclick="window.location.href = 'cheatsheetforcss.html'">CSS</button></li>
+                <li><button onclick="window.location.href = 'cheatsheetforhtml.html'">HTML</button></li>
+                <li><button onclick="window.location.href = 'https://www.selbsthilfe-ooe.at/selbsthilfegruppen/selbsthilfegruppe_finden/'">C</button></li>
+                <li><button onclick="window.location.href = 'animation.html'">Animation</button></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+    <div class="jahoda">
+        <span>J</span><span onclick="window.location.href = 'https://landstrassler.at'">A</span><span>H</span><span>O</span><span>D</span><span>A</span>
+    </div>
 </body>
+</html>
