--- a/cheatsheetgeneral.html
+++ b/cheatsheetgeneral.html
@@ -7,13 +7,24 @@
     <title>Cheat-Sheet General</title>
 </head>
 <body>
-    <h1>Cheat-Sheet General</h1>
+    <div class="menu-container">
+        <nav>
+            <ul>
+                <li><button class="home" onclick="window.location.href = 'cheatsheet.html'"><img class="home-button" src="yamaha.jpg" alt="Homepage"></button></li>
+                <li><button onclick="window.location.href = '#world-wide-web-general'">World Wide Web General</button></li>
+                <li><button onclick="window.location.href = '#web-server'">Web Server</button></li>
+                <li><button onclick="window.location.href = '#web-client'">Web Client</button></li>
+                <li><button onclick="window.location.href = '#hello-world'">Hello World</button></li>
+                <li><button onclick="window.location.href = 'cheatsheet.html'">Homepage</button></li>
+            </ul>
+        </nav>
+    </div>
+
+    <br>
 
     <hr>
-    <button onclick="window.location.href = '#world-wide-web-general'">World Wide Web General</button>
-    <button onclick="window.location.href = '#web-server'">Web Server</button>
-    <button onclick="window.location.href = '#web-client'">Web Client</button>
-    <button onclick="window.location.href = '#hello-world'">Hello World</button>
+
+    <h1>Cheat-Sheet General</h1>
 
     <hr>
     <h2 id = "world-wide-web-general">World Wide Web General</h2>
