--- a/animation.html
+++ b/animation.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
-        <nav><button onclick="window.location.href = 'cheatsheet.html'">Back</button></nav>
+        <nav><button onclick="window.location.href = 'index.html'">Back</button></nav>
 
         <div class="loader"></div>
     </body>
