--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -14,6 +14,7 @@
                 <li><button onclick="window.location.href = 'cheatsheetgeneral.html'">General</button></li>
                 <li><button onclick="window.location.href = 'cheatsheetforcss.html'">CSS</button></li>
                 <li><button onclick="window.location.href = 'cheatsheetforhtml.html'">HTML</button></li>
+                <li><button onclick="window.location.href = 'cheatsheetforbootstrap.html'">Bootstrap</button></li>
                 <li><button onclick="window.location.href = 'https://www.selbsthilfe-ooe.at/selbsthilfegruppen/selbsthilfegruppe_finden/'">C</button></li>
                 <li><button onclick="window.location.href = 'animation.html'">Animation</button></li>
             </ul>
