--- a/cheatsheetgeneral.html
+++ b/cheatsheetgeneral.html
@@ -10,7 +10,7 @@
     <div class="menu-container">
         <nav>
             <ul>
-                <li><button class="home" onclick="window.location.href = 'cheatsheet.html'"><img class="home-button" src="yamaha.jpg" alt="Homepage"></button></li>
+                <li><button class="home" onclick="window.location.href = 'index.html'"><img class="home-button" src="yamaha.jpg" alt="Homepage"></button></li>
                 <li><button onclick="window.location.href = '#world-wide-web-general'">World Wide Web General</button></li>
                 <li><button onclick="window.location.href = '#web-server'">Web Server</button></li>
                 <li><button onclick="window.location.href = '#web-client'">Web Client</button></li>
