--- a/cheatsheetforcss.html
+++ b/cheatsheetforcss.html
@@ -11,7 +11,7 @@
     <div class="menu-container">
         <nav>
             <ul>
-                <li><button class="home" onclick="window.location.href = 'cheatsheet.html'"><img class="home-button" src="yamaha.jpg" alt="Homepage"></button></li>
+                <li><button class="home" onclick="window.location.href = 'index.html'"><img class="home-button" src="yamaha.jpg" alt="Homepage"></button></li>
                 <li><button onclick="window.location.href = '#floating-elements'">Floating Elements</button></li>
                 <li><button onclick="window.location.href = '#box-model'">Box Model</button></li>
                 <li><button onclick="window.location.href = '#lists'">Lists</button></li>
